--- a/shortner/templates/shortner/index.html
+++ b/shortner/templates/shortner/index.html
@@ -1,42 +1,49 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    
-    <div class="container my-4">
-        <form action="" method="POST">
-            {% csrf_token %}
-            <div class="form-group">
-              <label for="url">Enter the URL</label>
-              <input type="text" class="form-control" name="url" id="url" placeholder="Enter your URL">
-            </div>
-           
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-          <br>
-          <h2>URL: {{url}}</h2>
-          <h2>Sort URL: {{slug}}</h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Django URL Shortner</title>
+  <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  {# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> #}
+  
+</head>
+<body>
+  <div id="wrapper">
+    <div class="jumbotron" id="banner" style="padding-bottom: 0;">
+        <div class="container">
+          <h1><a href="">URL Shortener</a></h1>
+          <p>Shorten your long URLs and share them with your friends!</p>
+        </div>
+      </div>
     </div>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
+    <div class="container">
+        <div class="container my-4">
+            <form action="" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                  <label for="url">Enter the URL</label>
+                  <input type="text" class="form-control" name="url" id="url" placeholder="Enter your URL">
+                </div>
+               
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+              <br>
+              <h2>URL: {{url}}</h2>
+              <h2>Sort URL: {{slug}}</h2>
+        </div>
+    </div>
+    <div id="push"></div>
+  </div>
+  <div id="footer">
+    <div class="container">
+      <p class="muted credit">
+        Copyright &copy; 2021 Pushpendra Tripathi.
+        Source code available on <a href="https://github.com/pushpendra-starlord/URL_Shortner">GitHub</a>.
+      </p>
+    </div>
+  </div>
+</body>
 </html>
-
