--- a/shortner/templates/shortner/index.html
+++ b/shortner/templates/shortner/index.html
@@ -1,49 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Django URL Shortner</title>
-  <!-- Bootstrap CDN -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  {# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> #}
-  
-</head>
-<body>
-  <div id="wrapper">
-    <div class="jumbotron" id="banner" style="padding-bottom: 0;">
-        <div class="container">
-          <h1><a href="">URL Shortener</a></h1>
-          <p>Shorten your long URLs and share them with your friends!</p>
-        </div>
+{% extends 'shortner/base.html' %}
+
+{% block content %}
+<div class="container my-4">
+  <form action="" method="POST">
+      {% csrf_token %}
+      <div class="form-group">
+        <label for="url">Enter the URL</label>
+        <input type="text" class="form-control" name="url" id="url" placeholder="Enter your URL">
       </div>
-    </div>
-    <div class="container">
-        <div class="container my-4">
-            <form action="" method="POST">
-                {% csrf_token %}
-                <div class="form-group">
-                  <label for="url">Enter the URL</label>
-                  <input type="text" class="form-control" name="url" id="url" placeholder="Enter your URL">
-                </div>
-               
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
-              <br>
-              <h2>URL: {{url}}</h2>
-              <h2>Sort URL: {{slug}}</h2>
-        </div>
-    </div>
-    <div id="push"></div>
-  </div>
-  <div id="footer">
-    <div class="container">
-      <p class="muted credit">
-        Copyright &copy; 2021 Pushpendra Tripathi.
-        Source code available on <a href="https://github.com/pushpendra-starlord/URL_Shortner">GitHub</a>.
-      </p>
-    </div>
-  </div>
-</body>
-</html>
+     
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <br>
+    {% if url %}
+    <h3>URL: {{url}}</h3>
+    {% endif %}
+    {% if slug %}
+    <h3>Sort URL: <a href="{{slug}}">{{slug}} </a></h3>
+    {% endif %}
+    {% if urls %}
+    {% for data in urls %}
+    <h3>{{forloop.counter}}: {{data.original_url}} | {{data.slug}} | {{data.expired}} | {{data.created_at}}</h3>
+
+    {% endfor %}
+
+    {% else %}
+    <center><h3>You dont have any short url</h3></center>
+    {% endif %}
+</div>
+{% endblock %}
